# CenyMieszkan

./: .pre-commit-config.yaml  Makefile  README.md  baza_danych_kod.sql  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  mkdocs.yml  pyproject.toml  run.py  run_zajecia04.py
CenaMieszkan/Analiza_statystyczna/: statistics_analysis.py  visualization.py
CenaMieszkan/application/: entrypoint.py
CenaMieszkan/pobranie_danych/: __init__.py  db_manager.py  models.py  settings.py
CenaMieszkan/prediction/: city_sqmeters_price.py  price_predictor.py  price_sqmeters_prediction.py
CenaMieszkan/preprocessing/: preprocessor.py
CenaMieszkan/utils/: __init__.py  consts.py  logging.py
flats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prediction_images/: price_predictions.txt
src/: run.py
src/zajecia01/: czas.py  skrypt1.py  skrypt2.py  wyniki.json
src/zajecia02/: Funckje cz.1.py  __init__.py  przypisywania.py  pętle.py
src/zajecia03/: Konwencja  nazewnictwa.py  Moduły.py  Zasięgi.py  __init__.py  funckje cz.2.py
src/zajecia04/fleet/: __init__.py  ambulance.py  cw4.py  station.py
src/zajecia04/operations/: incident.py  incident_queue.py
src/zajecia04/personnel/: driver.py  employee.py
src/zajecia05/: dekoratory.py  wyjatki.py
src/zajecia08/: cli_entrypoint.py  file1.py  file2.py
src/zajecia08/utils/: logging.py
tests/: test_cw5.py  test_cw_4.py
